plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'movietracker'
version = '0.1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = '25.0.2'
    modules = ['javafx.controls']
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.13.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

application {
    mainClass = 'movietracker.Launcher'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

tasks.named('test') {
    useJUnitPlatform()
}
